<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">选择附件</string>

    <!-- extraview.xml -->
    <string name="extra_textview_picture">图片</string>
    <string name="extra_textview_video">视频</string>
    <string name="extra_textview_audio">语音</string>
    <string name="extra_textview_file">文件</string>

    <!-- ExtraView.java -->
    <string name="extra_dialog_picture_title">选择图片</string>
    <string name="extra_dialog_gallery">图库</string>
    <string name="extra_dialog_camera">拍照</string>
    <string name="extra_dialog_delete">删除</string>
    <string name="extra_dialog_preview">预览</string>
    <string name="extra_number_is_enough">附件已添加满</string>
    <string name="extra_picture_is_enough">图片已添加满</string>
    <string name="extra_video_is_enough">视频已添加满</string>
    <string name="extra_audio_is_enough">音频已添加满</string>
    <string name="extra_file_is_enough">音频已添加满</string>

    <!-- extra_audio_app_activity.xml -->
    <string name="extra_button_cancel">取消</string>
    <string name="extra_button_play">播放</string>
    <string name="extra_button_stop">停止</string>
    <string name="extra_button_confirm">确定</string>
    <string name="extra_textview_title">录音</string>
    <string name="extra_textview_time">00:00</string>

    <!-- AudioAppActivity.java -->
    <string name="extra_start_record_audio_fail">开启录音失败</string>

    <!-- AudioPlayerUtil.java -->
    <string name="extra_play_audio_fail">播放录音失败</string>
    <string name="extra_please_stop_player">请先停止播放录音</string>
    <string name="extra_audio_file_is_not_exist">音频文件不存在</string>

    <!-- extra_progress_dialog.xml -->
    <string name="extra_titleText">上传附件</string>
    <string name="extra_labelText_success">成功：</string>
    <string name="extra_labelText_fail">失败：</string>
    <string name="extra_cancelButton">取消上传</string>

</resources>